ADD style sheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="/node-mailer/server.js"></script>
+    <link rel="stylesheet" href="/node-mailer/style.css" />
   </head>
   <body>
     <div class="form-container">
@@ -43,7 +44,7 @@
             id="message-id"
           ></textarea>
         </div>
-        <input class="border-button form-button" type="submit" value="submit" />
+        <input class="form-button" type="submit" value="submit" />
       </form>
     </div>
   </body>
